grid to sidebar and top

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
   <body>
     <div class="container">
       <header>
+        <div class="menu">
+          <i class="subletter fa-lg fas fa-bars"></i>
+        </div>
 
-        <i class="subletter menu-icon fa-lg fas fa-bars"></i>
-        <div>
+        <div class="logo">
           <img class="logo" src="assets/logo.png" alt="YouTube" />
         </div>
 
-        <div>
+        <div class="search_box">
           <form>
             <input
               class="search_input"
@@ -179,30 +181,28 @@
         <p>
           Up next
         </p>
-        <div class="recommand-grid-containter">
-          <div class="recommadn-grid-item">
-            <div class="recommand-video-image">
+        <div class="recommand">
+          <div class="grid_2">
+            <div class="image">
               <!--first sidebar vedio-->
               <a href="https://www.youtube.com/watch?v=Yp24C28xDMc">
                 <img src="./assets/Elina.png" />
               </a>
             </div>
-            <div class="recommand-video-text">
+            <div class="text">
               <p><b>Elina Nechayeva - Der Hˆlle Rache - Mozart </b></p>
               <p class="subletter">Elina Netöajeva</p>
               <p class="subletter">22,680 views</p>
             </div>
           </div>
-
           <hr />
-
-          <div class="recommadn-grid-item">
-            <div class="recommand-video-image">
+          <div class="grid_2">
+            <div class="image">
               <a href="https://www.youtube.com/watch?v=aNMlq-hOIoc">
                 <img src="./assets/Sungjin.png" />
               </a>
             </div>
-            <div class="recommand-video-text">
+            <div class="text">
               <p>
                 <b>
                   Seong-jin Cho / Rachmaninoff:Piano Concerto No. 2 in C minor,
@@ -214,13 +214,13 @@
             </div>
           </div>
 
-          <div class="recommadn-grid-item">
-            <div class="recommand-video-image">
+          <div class="grid_2">
+            <div class="image">
               <a href="https://www.youtube.com/watch?v=Hpi0Lvu1INo">
                 <img src="./assets/Yuja.png" />
               </a>
             </div>
-            <div class="recommand-video-text">
+            <div class="text">
               <p>
                 <b>Yuja Wang plays Scriabin's Sonata No.2 (2013, Japan) </b>
               </p>
@@ -229,13 +229,13 @@
             </div>
           </div>
 
-          <div class="recommadn-grid-item">
-            <div class="recommand-video-image">
+          <div class="grid_2">
+            <div class="image">
               <a href="https://www.youtube.com/watch?v=vU-MLVL8tMw">
                 <img src="./assets/Yeouleom.png" />
               </a>
             </div>
-            <div class="recommand-video-text">
+            <div class="text">
               <p>
                 <b>Chopin nocturne op27-2(Yeol Eum Son) </b>
               </p>
@@ -244,13 +244,13 @@
             </div>
           </div>
 
-          <div class="recommadn-grid-item">
-            <div class="recommand-video-image">
+          <div class="grid_2">
+            <div class="image">
               <a href="https://www.youtube.com/watch?v=abdUjh6yo8E">
                 <img src="./assets/Yuja2.png" />
               </a>
             </div>
-            <div class="recommand-video-text">
+            <div class="text">
               <p>
                 <b>
                   Yuja Wang plays Tritsch-Tratsch Polka
@@ -261,13 +261,13 @@
             </div>
           </div>
 
-          <div class="recommadn-grid-item">
-            <div class="recommand-video-image">
+          <div class="grid_2">
+            <div class="image">
               <a href="https://www.youtube.com/watch?v=PbIX8zY17Z4">
                 <img src="./assets/Yev.png" />
               </a>
             </div>
-            <div class="recommand-video-text">
+            <div class="text">
               <p>
                 <b>
                   Evgeny Kissin plays Rachmaninoff's Piano Concert No. 2
