Modify description for music

--- a/index.html
+++ b/index.html
@@ -260,8 +260,7 @@
             <div class="text">
               <p>
                 <b>
-                  Seong-jin Cho / Rachmaninoff:Piano Concerto No. 2 in C minor,
-                  OP. 18 (12DEC.2018)
+                  Seong-jin Cho / Rachmaninoff:Piano Concerto No. 2 in C minor, OP. 18
                 </b>
               </p>
               <p class="subletter">Ren yu</p>
